# libcanard

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .sonar-project.properties  .travis.yml  AGENTS.md  Android.bp  CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  Kconfig  LICENSE  MIGRATION_v3.x_to_v4.0.md  README.md  canard.c  canard.h  canard_can.c  canard_can.h  canard_internals.h  compile_dsdl.py  format.sh  get_data_type_signature.py  header.jinja  idf_component.yml  run_static_analysis.sh  setup.cfg  show_data_type_info.py  sonar-project.properties
.github/: codeql-config.yaml
.github/workflows/: codeql.yml  esp_dry_run.yml  esp_publish.yml  main.yml  package_esp_component.sh
demos/: CMakeLists.txt  heartbeat_monitor.c
docker/: Dockerfile
drivers/: README.md
drivers/AVR/: .gitignore  README.md  can_config.h  canard_AVR.c  canard_AVR.h
drivers/at90can128/: canard_at90can128.c  canard_at90can128.h
drivers/at90can128/avr-can-lib/: README.md  can.h  config.h
drivers/avr/: CMakeLists.txt  README.md  can_config.h  canard_avr.c
drivers/nuttx/: README.md  canard_nuttx.c  canard_nuttx.h  nuttx.c  nuttx.h
drivers/nuttxcan/: nuttxcan.c  nuttxcan.h
drivers/socketcan/: README.md  socketcan.c  socketcan.h
drivers/stm32/: README.md  _internal_bxcan.h  canard_stm32.c  canard_stm32.h
dsdl_compiler/: README.md  libcanard_dsdlc
dsdl_compiler/libcanard_dsdl_compiler/: LICENSE  __init__.py  code_type_template.tmpl  data_type_template.tmpl  pyratemp.py
esp_metadata/: CMakeLists.txt  Kconfig  idf_component.yml  package_esp_component.sh
lib/cavl2/: cavl2.h
libcanard/: .clang-tidy  _canard_cavl.h  canard.c  canard.h  canard_dsdl.c  canard_dsdl.h  canard_internals.h  cavl.h  cavl2.h
src/: Makefile  canard.c  canard.h  canard_internals.h  canard_test.c  crc_test.c
tests/: .clang-tidy  CMakeLists.txt  README.md  canard_config_private.h  canard_test.c  crc_test.c  demo.c  exposed.hpp  helpers.hpp  internals.hpp  main.cpp  test_crc.cpp  test_dsdl.cpp  test_example.cpp  test_float16.cpp  test_framing.cpp  test_init.cpp  test_internals.cpp  test_memory_allocator.cpp  test_payload_read.cpp  test_private_cavl.cpp  test_private_crc.cpp  test_private_rx.cpp  test_private_tx.cpp  test_public_filters.cpp  test_public_float16.cpp  test_public_roundtrip.cpp  test_public_rx.cpp  test_public_tx.cpp  test_rxerr.cpp  test_scalar_encoding.cpp  test_self.cpp  test_tx.cpp  test_type_dependency.py
tests/src/: helpers.h  test_api_lifecycle.cpp  test_api_loopback.cpp  test_api_multiframe.cpp  test_api_roundtrip.cpp  test_api_rx.cpp  test_api_rx_edge.cpp  test_api_tx.cpp  test_api_tx_queue.cpp  test_helpers.c  test_intrusive_misc.c  test_intrusive_rx.c  test_intrusive_rx_admission.c  test_intrusive_rx_filter.c  test_intrusive_rx_session.c  test_intrusive_tx.c  test_intrusive_util.c
tests/stm32/: test_can_timings.cpp
tools/: Dockerfile  entrypoint.sh  run-docker.sh
